--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="./script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+
 
     <title>Quiz App</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
@@ -24,7 +21,7 @@
                 <h1>Coding Quiz Challenge</h1>
                 <p id="try">Try to answer the following code related questions within the time limit!</p>
                 <!-- start button -->
-                <button class="start">Start</button>
+                <button id="start">Start</button>
 
                 <div id="question">Question</div>
                 <!-- buttons for each answer for the questions -->
@@ -46,9 +43,13 @@
             </div>
         </div>
     </div>
-   
-    
 
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
